package fr.uga.l3miage.example.enums;

public enum Carburant {
    ELECTRIC,
    SP98,
    SP95,
    DIESEL,
    E85
}
