package fr.uga.l3miage.example.enums;

public enum Model {
    GT3RS911,
    GT3RS914,
    GT911,
    GT914,
    CARRERA911
}
