package fr.uga.l3miage.example.enums;

public enum Places {
    TWO,
    FOUR,
    FIVE,
    SEVEN
}
