package fr.uga.l3miage.example.enums;

public enum TransmissionType {
    BVM,
    BVA
}
